Removed unsightly checkered pattern. Added snazzy borders around images and fixed spacing issues.

--- a/css/style.css
+++ b/css/style.css
@@ -22,20 +22,22 @@ p {color: yellow;}
 
 li {color: white;}
 
-.h4 {color: yellow;}
+.h4 {color: yellow;
+	margin-left: 30px;}
 
 /*image formating*/
-.top-image {
-	margin-top: 15px;
-	margin-left: 15px;
-}
+.siteheader {
+	border: 2px solid red;
+	border-radius: 10px}
 
-.bottom-image {
-	margin-right: 20px;
+.top-image, .bottom-image {
+	margin: 15px;
+	border: 2px solid red;
+	border-radius: 10px;
 }
 
 /*vector based css checkered pattern using crossing gradients*/
-.checkered {
+/*.checkered {
 background-color: #eee;
 background-size: 60px 60px;
 background-position: 0 0, 30px 30px;
@@ -50,7 +52,7 @@ background-image: linear-gradient(45deg, black 25%, transparent 25%, transparent
                  #eee;
 behavior: url(/pie/PIE.htc);
 }
-
+*/
 /*vector based carbon pattern made using css styles*/
 .content {
 	            -webkit-linear-gradient(243deg, #151515 5px, transparent 5px) 10px 0px,
